Bug 294885 - Wrong punctuation in Dolphin statusbar (Probably Solid / uDisk Backend)
Summary: Wrong punctuation in Dolphin statusbar (Probably Solid / uDisk Backend)
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: libsolid-udisks (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-26 20:57 UTC by Michael Skiba
Modified: 2012-08-17 21:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Skiba 2012-02-26 20:57:26 UTC
Version:           2.0 (using KDE 4.8.0) 
OS:                Linux

I reported a bug against a German translation:
https://bugs.kde.org/show_bug.cgi?id=294876

The translation is fixed, but the punctuation is still wrong, as the problem exists in the English template as well.

For those who don't speak German (yeah, silly me, thought I could write a bug report about a German typo in German ...) the summary:

When I use Dolphin to eject a CD that is currently in use I get an errormessage that reads "The Device is currently busy.: /dev/sr0 is mounted". Notice the extra dot. This affects more than one String, but the above was the easiest to reproduce :)

Frederik Schwarzer pointed out the following pieces of code:
solid/solid/backends/udisks/udisksdevice.cpp

735 QString UDisksDevice::errorToString(const QString & error) const
736 {
737     if (error == UD_ERROR_UNAUTHORIZED)
738         return QObject::tr("You are not authorized to perform this
operation.");
739     else if (error == UD_ERROR_BUSY)
740         return QObject::tr("The device is currently busy.");
741     else if (error == UD_ERROR_FAILED)
742         return QObject::tr("The requested operation has failed.");
743     else if (error == UD_ERROR_CANCELED)
744         return QObject::tr("The requested operation has been canceled.");
745     else if (error == UD_ERROR_INVALID_OPTION)
746         return QObject::tr("An invalid or malformed option has been
given.");
747     else if (error == UD_ERROR_MISSING_DRIVER)
748         return QObject::tr("The kernel driver for this filesystem type is
not available.");
749     else
750         return QObject::tr("An unspecified error has occurred.");
751 }

and
/solid/solid/backends/udisks/udisksstorageaccess.cpp:                          
           m_device->errorToString(error.name()) + ": " +error.message());      
/solid/solid/backends/udisks/udisksstorageaccess.cpp:                          
           m_device->errorToString(error.name()) + ": " + error.message());
/solid/solid/backends/udisks/udisksopticaldrive.cpp:                           
      m_device->errorToString(error.name()) + ": " +error.message());
/solid/solid/backends/udisks/udisksdevice.h:    QString errorToString(const
QString & error) const;

Reproducible: Always

Steps to Reproduce:
Open Dolphin, insert a CD, open a File from the CD.
Rightclick on the CD entry in the Dolphin sidebar.
Click the "Eject CD" label

Actual Results:  
"The Device is currently busy.: /dev/sr0 is mounted"

Expected Results:  
The Device is currently busy: /dev/sr0 is mounted
Comment 1 Michael Skiba 2012-02-26 20:58:35 UTC
I don't know whether this covers all strings or just a subset of it ...
Comment 2 Lukáš Tinkl 2012-02-27 11:42:51 UTC
Git commit 5f33dfa82dd02e2bb97fb35a3a74d9e64e9eb4ee by Lukas Tinkl.
Committed on 27/02/2012 at 12:42.
Pushed by lukas into branch 'frameworks'.

remove extra punctuation

M  +14   -14   tier1/solid/solid/backends/udisks2/udisksdevice.cpp

http://commits.kde.org/kdelibs/5f33dfa82dd02e2bb97fb35a3a74d9e64e9eb4ee
Comment 3 Lukáš Tinkl 2012-08-17 21:18:38 UTC
Git commit 117ebf93da513f7e3ebda1725cea95b0ed9091df by Lukas Tinkl.
Committed on 27/02/2012 at 12:42.
Pushed by nalvarez into branch 'KDE/4.10'.

remove extra punctuation

(commit extracted from 5f33dfa82dd02e2bb97fb35a3a74d9e64e9eb4ee)

M  +14   -14   solid/solid/backends/udisks2/udisksdevice.cpp

http://commits.kde.org/kdelibs/117ebf93da513f7e3ebda1725cea95b0ed9091df