remove extra punctuation

BUG: 294885